force-app/main/default/objects/custom_create340__c/custom_create340__c.object-meta.xml
<CustomObject>
    <label>Custom created object340</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects340</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>