force-app/main/default/objects/custom_create340__c/fields/custom_create_340field542__c.field-meta.xml
<CustomField>
    <fullName>custom_create_340field542__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 340field542</label>
    <type>Checkbox</type>
</CustomField>